--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,10 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework:spring-web'
+	implementation 'com.google.guava:guava:30.0-jre'
+	implementation 'org.modelmapper:modelmapper:2.4.4'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
